git: ignore public SSL keys
These files are generated by scons. This generalizes a previous rule on
a specific unit test public SSL key.

BUG=none
TEST=annoying .pub.pem file is ignored by git

Change-Id: Ia07beb83059404bedf54ebf91a2728075b4457aa
Reviewed-on: https://gerrit.chromium.org/gerrit/22619
Reviewed-by: Don Garrett <dgarrett@chromium.org>
Commit-Ready: Gilad Arnold <garnold@chromium.org>
Tested-by: Gilad Arnold <garnold@chromium.org>

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # Build/test generated files
 *.gcda
 *.gcno
+/*.pub.pem
 /.sconsign.dblite
 /app.info
 /delta_generator
@@ -19,7 +20,6 @@
 /marshal.glibmarshal.c
 /marshal.glibmarshal.h
 /test_http_server
-/unittest_key.pub.pem
 /update_engine
 /update_engine.dbusclient.h
 /update_engine.dbusserver.h
@@ -27,4 +27,3 @@
 /update_engine_unittests
 /update_metadata.pb.cc
 /update_metadata.pb.h
-
