--- a/build
+++ b/build
@@ -8,4 +8,4 @@
 # number of build threads, it uses the number of processing cores plus one.
 
 NUM_CORES=$(cat /proc/cpuinfo | grep '^processor' | wc -l)
-scons -j $((NUM_CORES + 1)) "$@"
+CFLAGS=-O1 scons -j $((NUM_CORES + 1)) "$@"
