feat(eclass/cros-kernel): remove SECURITY_CHROMIUMOS
we don't want to lock down while things are moving (see breaking) fast

--- a/eclass/cros-kernel/i386_defconfig
+++ b/eclass/cros-kernel/i386_defconfig
@@ -427,7 +427,7 @@ CONFIG_KEYS_DEBUG_PROC_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_YAMA=y
-CONFIG_SECURITY_CHROMIUMOS=y
+# CONFIG_SECURITY_CHROMIUMOS is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_CRYPTO_HMAC=y
