chore(eclass): bump to latest code from chromeos

--- a/eclass/cros-kernel/exynos5_defconfig
+++ b/eclass/cros-kernel/exynos5_defconfig
@@ -200,6 +200,8 @@ CONFIG_HW_RANDOM=y
 CONFIG_TCG_TPM=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=m
+CONFIG_I2C_MUX=y
+CONFIG_I2C_ARBITRATOR_CROS_EC=y
 CONFIG_I2C_S3C2410=y
 CONFIG_I2C_STUB=m
 CONFIG_SPI=y
