fix(UpdateEngine): use coreos user not chronos

--- a/UpdateEngine.conf
+++ b/UpdateEngine.conf
@@ -5,7 +5,7 @@
     <allow own="org.chromium.UpdateEngine" />
     <allow send_destination="org.chromium.UpdateEngine" />
   </policy>
-  <policy user="chronos">
+  <policy user="core">
     <!-- introspection is denied -->
     <deny send_destination="org.chromium.UpdateEngine"
           send_interface="org.freedesktop.DBus.Introspectable" />
