fix(app-emulation/docker): add lxcbr0 on startup
lxcbr0 is required for docker networking to work. Ensure that we get
that setup on startup and tear it down on stop.

https://github.com/dotcloud/docker/issues/219
http://stackoverflow.com/questions/15768121/docker-net-no-such-interface

--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -1,5 +1,9 @@
 [Service]
+ExecStartPre=/sbin/brctl addbr lxcbr0
+ExecStartPre=/bin/ifconfig lxcbr0 10.65.41.1
 ExecStart=/usr/bin/docker -d
+ExecStopPost=/bin/ifconfig lxcbr0 down
+ExecStopPost=/sbin/brctl delbr lxcbr0
 
 [Install]
 WantedBy=multi-user.target
