fix(docker.service): remount everything as private
lxc uses pivot_root. pivot_root doesn't like shared mounts[1]. Disable
shared mounts before starting docker.

[1] https://access.redhat.com/site/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Storage_Administration_Guide/sect-Using_the_mount_Command-Mounting-Bind.html

--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -1,4 +1,5 @@
 [Service]
+ExecStartPre=/bin/mount --make-rprivate /
 ExecStartPre=/sbin/brctl addbr lxcbr0
 ExecStartPre=/bin/ifconfig lxcbr0 10.65.41.1
 ExecStart=/usr/bin/docker -d
