--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -109,7 +109,9 @@ CONFIG_INET6_XFRM_MODE_BEET=m
 CONFIG_IPV6_SIT=m
 CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
-# CONFIG_NETFILTER_ADVANCED is not set
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 CONFIG_NF_CONNTRACK=y
 # CONFIG_NF_CONNTRACK_SECMARK is not set
 # CONFIG_NF_CONNTRACK_FTP is not set
@@ -127,7 +129,8 @@ CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_IP_NF_TARGET_ULOG=y
-# CONFIG_NF_NAT is not set
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_NET_SCHED=y
 CONFIG_BT=m
