--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -1,4 +1,5 @@
 [Service]
+Type=forking
 ExecStartPre=/bin/mount --make-rprivate /
 ExecStartPre=/sbin/brctl addbr lxcbr0
 ExecStartPre=/bin/ifconfig lxcbr0 10.65.41.1
