--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -112,6 +112,8 @@ CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NETFILTER_XTABLES=y
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+CONFIG_IP_NF_TARGET_MASQUERADE=y
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
 CONFIG_NF_CONNTRACK=y
 # CONFIG_NF_CONNTRACK_SECMARK is not set
 # CONFIG_NF_CONNTRACK_FTP is not set
