--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -57,15 +57,11 @@ CONFIG_HZ_1000=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_TRACE_RTC=y
-CONFIG_ACPI_PROCFS=y
-CONFIG_ACPI_VIDEO=y
-CONFIG_ACPI_DOCK=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_X86_ACPI_CPUFREQ=y
 CONFIG_PCI_MMCONFIG=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI_PCIE=y
@@ -135,23 +131,6 @@ CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_NET_SCHED=y
-CONFIG_BT=m
-CONFIG_BT_RFCOMM=m
-CONFIG_BT_HIDP=m
-CONFIG_BT_HCIBTUSB=m
-CONFIG_BT_HCIBCM203X=m
-CONFIG_BT_HCIBPA10X=m
-CONFIG_BT_HCIBFUSB=m
-CONFIG_BT_HCIVHCI=m
-CONFIG_BT_ATH3K=m
-CONFIG_CFG80211=m
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_DEBUGFS=y
-CONFIG_MAC80211=m
-CONFIG_MAC80211_DEBUGFS=y
-CONFIG_MAC80211_DEBUG_MENU=y
-CONFIG_MAC80211_VERBOSE_DEBUG=y
-CONFIG_RFKILL=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_DEBUG_DEVRES=y
@@ -222,10 +201,6 @@ CONFIG_PHYLIB=y
 CONFIG_PPP=m
 CONFIG_PPP_ASYNC=m
 CONFIG_USB_PEGASUS=m
-CONFIG_USB_NET_DM9601=m
-CONFIG_USB_NET_SMSC75XX=m
-CONFIG_USB_NET_SMSC95XX=m
-CONFIG_USB_NET_MCS7830=m
 # CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_USB_HSO=y
@@ -233,31 +208,12 @@ CONFIG_USB_NET_GOBI=m
 CONFIG_LIBERTAS_THINFIRM=m
 CONFIG_LIBERTAS_THINFIRM_USB=m
 CONFIG_USB_NET_RNDIS_WLAN=m
-CONFIG_MAC80211_HWSIM=m
-CONFIG_ATH_COMMON=m
-CONFIG_ATH_DEBUG=y
-CONFIG_ATH5K=m
-CONFIG_ATH9K=m
-CONFIG_ATH9K_DEBUGFS=y
-CONFIG_HOSTAP=m
-CONFIG_HOSTAP_FIRMWARE=y
-CONFIG_HOSTAP_FIRMWARE_NVRAM=y
-CONFIG_HOSTAP_PLX=m
-CONFIG_HOSTAP_PCI=m
-CONFIG_IWLWIFI=m
-CONFIG_IWL4965=m
-CONFIG_IWL3945=m
-CONFIG_RT2X00=m
-CONFIG_RT2800PCI=m
 # CONFIG_RT2800PCI_RT33XX is not set
 # CONFIG_RT2800PCI_RT35XX is not set
 # CONFIG_RT2800PCI_RT53XX is not set
-CONFIG_RTL8192CE=m
 # CONFIG_RTLWIFI_DEBUG is not set
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
-# CONFIG_INPUT_MOUSEDEV_PSAUX is not set
-CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_MOUSE_PS2_ELANTECH=y
@@ -305,43 +261,11 @@ CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_CORE=y
 CONFIG_LPC_SCH=m
 CONFIG_MEDIA_SUPPORT=m
-CONFIG_VIDEO_DEV=m
-# CONFIG_IR_NEC_DECODER is not set
-# CONFIG_IR_RC5_DECODER is not set
-# CONFIG_IR_RC6_DECODER is not set
-# CONFIG_IR_JVC_DECODER is not set
-# CONFIG_IR_SONY_DECODER is not set
-# CONFIG_IR_RC5_SZ_DECODER is not set
-# CONFIG_IR_LIRC_CODEC is not set
-# CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 CONFIG_USB_VIDEO_CLASS=m
-# CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
-# CONFIG_USB_GSPCA is not set
-# CONFIG_V4L_PCI_DRIVERS is not set
-# CONFIG_RADIO_ADAPTERS is not set
-CONFIG_AGP=y
-CONFIG_AGP_INTEL=y
-# CONFIG_VGA_ARB is not set
-CONFIG_DRM=y
-CONFIG_DRM_I915=y
-CONFIG_DRM_I915_KMS=y
 CONFIG_FB_MODE_HELPERS=y
 # CONFIG_LCD_CLASS_DEVICE is not set
-CONFIG_BACKLIGHT_CHROMEOS_KEYBOARD=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_SOUND=y
-CONFIG_SND=y
-CONFIG_SND_SEQUENCER=m
-CONFIG_SND_SEQ_DUMMY=m
-CONFIG_SND_HRTIMER=m
-CONFIG_SND_HDA_INTEL=m
-CONFIG_SND_HDA_HWDEP=y
-CONFIG_SND_HDA_INPUT_JACK=y
-CONFIG_SND_HDA_POWER_SAVE=y
-CONFIG_SND_HDA_POWER_SAVE_DEFAULT=15
-# CONFIG_SND_SPI is not set
-CONFIG_SND_USB_AUDIO=m
 CONFIG_HIDRAW=y
 CONFIG_HID_PID=y
 CONFIG_USB_HIDDEV=y
@@ -372,12 +296,7 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_PL2303=m
 CONFIG_USB_SERIAL_QUALCOMM=m
-CONFIG_USB_SERIAL_SIERRAWIRELESS=m
 CONFIG_USB_SERIAL_OPTION=m
-CONFIG_MMC=m
-CONFIG_MMC_BLOCK_MINORS=16
-CONFIG_MMC_SDHCI=m
-CONFIG_MMC_SDHCI_PCI=m
 CONFIG_LEDS_CLASS=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_HCTOSYS is not set
@@ -389,18 +308,7 @@ CONFIG_SENSORS_ISL29018=m
 CONFIG_SENSORS_TSL2563=m
 CONFIG_TSL2583=m
 CONFIG_ZRAM=m
-CONFIG_DELL_WMI=m
-CONFIG_HP_WMI=m
 CONFIG_INTEL_MENLOW=m
-CONFIG_ACPI_WMI=m
-CONFIG_ACPI_CHROMEOS=y
-CONFIG_CHROMEOS_LAPTOP=y
-CONFIG_CHROMEOS_RAMOOPS_RAM_START=0x00f00000
-CONFIG_CHROMEOS_RAMOOPS_RAM_SIZE=0x00100000
-CONFIG_CHROMEOS_RAMOOPS_RECORD_SIZE=0x00020000
-CONFIG_CHROMEOS_RAMOOPS_DUMP_OOPS=0x1
-CONFIG_GOOGLE_FIRMWARE=y
-CONFIG_GOOGLE_MEMCONSOLE=m
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
@@ -445,7 +353,7 @@ CONFIG_FTRACE_SYSCALLS=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
 CONFIG_STRICT_DEVMEM=y
-CONFIG_EARLY_PRINTK_DBGP=y
+CONFIG_EARLY_PRINTK=y
 CONFIG_DEBUG_STACKOVERFLOW=y
 # CONFIG_DEBUG_RODATA_TEST is not set
 CONFIG_DEBUG_SET_MODULE_RONX=y
