hack(app-admin/etcd): bootstrapping problems
put this hack in place until we figure out how to bootstrap doozer

--- a/app-admin/etcd/files/etcd.service
+++ b/app-admin/etcd/files/etcd.service
@@ -1,5 +1,5 @@
 [Service]
-ExecStart=/usr/sbin/etcd
+ExecStart=/usr/sbin/etcd -a doozer:?ca=1.d.core-os.net:8046
 
 [Install]
 WantedBy=multi-user.target
