hack(app-admin/etcd): run all of the scripts in bootstrap
systemd doesn't let you run a script _before_ the env variables get set.
This makes sense so run the scripts first.

--- a/app-admin/etcd/files/etcd-bootstrap.service
+++ b/app-admin/etcd/files/etcd-bootstrap.service
@@ -1,5 +1,6 @@
 [Service]
 ExecStart=/usr/lib/etcd/host/doozerd/configure.sh
+ExecStart=/usr/lib/etcd/host/riak/configure.sh
 Before=etcd.service
 
 [Install]
